load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro")
load("@bazel_skylib//lib:paths.bzl", "paths")
load(":copy_srcs.bzl", "copy_srcs")

rust_library(
    name = "cxx",
    srcs = glob(["src/**/*.rs"]),
    crate_features = [
        "alloc",
        "std",
    ],
    edition = "2021",
    proc_macro_deps = [
        ":cxxbridge-macro",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":core-lib",
        "@crates.io//:foldhash",
    ],
)

alias(
    name = "codegen",
    actual = ":cxxbridge",
    visibility = ["//visibility:public"],
)

copy_srcs(
    name = "cxxbridge-cmd-srcs",
    srcs = glob(["gen/cmd/src/*.rs"])
)

rust_binary(
    name = "cxxbridge",
    srcs = [":cxxbridge-cmd-srcs"],
    compile_data = ["include/cxx.h"],
    edition = "2021",
    deps = [
        "@crates.io//:clap",
        "@crates.io//:codespan-reporting",
        "@crates.io//:proc-macro2",
        "@crates.io//:quote",
        "@crates.io//:syn",
    ],
)

cc_library(
    name = "core",
    hdrs = ["include/cxx.h"],
    include_prefix = "rust",
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "core-lib",
    srcs = ["src/cxx.cc"],
    hdrs = ["include/cxx.h"],
    linkstatic = True,
)

copy_srcs(
    name = "cxxbridge-macro-srcs",
    srcs = glob(["macro/src/*.rs"])
)

rust_proc_macro(
    name = "cxxbridge-macro",
    srcs = [":cxxbridge-macro-srcs"],
    edition = "2021",
    proc_macro_deps = [
        "@crates.io//:rustversion",
    ],
    deps = [
        "@crates.io//:proc-macro2",
        "@crates.io//:quote",
        "@crates.io//:syn",
    ],
)

copy_srcs(
    name = "cxx-build-srcs",
    srcs = glob(["gen/build/src/*.rs"])
)

rust_library(
    name = "cxx-build",
    srcs = [":cxx-build-srcs"],
    compile_data = [
        "include/cxx.h",
    ],
    edition = "2021",
    deps = [
        "@crates.io//:cc",
        "@crates.io//:codespan-reporting",
        "@crates.io//:proc-macro2",
        "@crates.io//:quote",
        "@crates.io//:scratch",
        "@crates.io//:syn",
    ],
)

copy_srcs(
    name = "cxx-gen-srcs",
    srcs = glob(["gen/lib/src/*.rs"])
)

rust_library(
    name = "cxx-gen",
    srcs = [":cxx-gen-srcs"],
    compile_data = ["include/cxx.h"],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "@crates.io//:cc",
        "@crates.io//:codespan-reporting",
        "@crates.io//:proc-macro2",
        "@crates.io//:quote",
        "@crates.io//:syn",
    ],
)
