load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro")

rust_library(
    name = "cxx",
    srcs = glob(["src/**/*.rs"]),
    crate_features = [
        "alloc",
        "std",
    ],
    edition = "2021",
    proc_macro_deps = [
        ":cxxbridge-macro",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":core",
        "@crates.io//:foldhash",
    ],
)

alias(
    name = "codegen",
    actual = ":cxxbridge",
    visibility = ["//visibility:public"],
)

rust_library(
    name = "syntax",
    srcs = glob(["syntax/*.rs"]),
    crate_root = "syntax/mod.rs",
    edition = "2021",
    deps = [
        "@crates.io//:proc-macro2",
        "@crates.io//:quote",
        "@crates.io//:syn",
    ],
)

rust_library(
    name = "gen",
    srcs = glob(["gen/src/*.rs"]),
    compile_data = ["include/cxx.h"],
    crate_root = "gen/src/mod.rs",
    edition = "2021",
    deps = [
        ":syntax",
        "@crates.io//:codespan-reporting",
        "@crates.io//:proc-macro2",
        "@crates.io//:quote",
        "@crates.io//:syn",
    ],
)

rust_binary(
    name = "cxxbridge",
    srcs = glob(["gen/cmd/src/*.rs"]),
    compile_data = ["include/cxx.h"],
    edition = "2021",
    deps = [
        ":gen",
        ":syntax",
        "@crates.io//:clap",
        "@crates.io//:codespan-reporting",
        "@crates.io//:proc-macro2",
        "@crates.io//:quote",
        "@crates.io//:syn",
    ],
)

cc_library(
    name = "core",
    srcs = ["src/cxx.cc"],
    hdrs = ["include/cxx.h"],
    include_prefix = "rust",
    linkstatic = True,
    strip_include_prefix = "include",
    visibility = ["//visibility:public"],
    deps = [
        "@capnp-cpp//src/kj:kj"
    ]
)

rust_proc_macro(
    name = "cxxbridge-macro",
    srcs = glob(["macro/src/*.rs"]),
    edition = "2021",
    proc_macro_deps = [
        "@crates.io//:rustversion",
    ],
    deps = [
        ":gen",
        ":syntax",
        "@crates.io//:proc-macro2",
        "@crates.io//:quote",
        "@crates.io//:syn",
    ],
)

rust_library(
    name = "cxx-build",
    srcs = glob(["gen/build/src/*.rs"]),
    compile_data = [
        "include/cxx.h",
    ],
    edition = "2021",
    deps = [
        ":gen",
        ":syntax",
        "@crates.io//:cc",
        "@crates.io//:codespan-reporting",
        "@crates.io//:proc-macro2",
        "@crates.io//:quote",
        "@crates.io//:scratch",
        "@crates.io//:syn",
    ],
)

rust_library(
    name = "cxx-gen",
    srcs = glob(["gen/lib/src/*.rs"]),
    compile_data = ["include/cxx.h"],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        ":gen",
        ":syntax",
        "@crates.io//:cc",
        "@crates.io//:proc-macro2",
        "@crates.io//:quote",
        "@crates.io//:syn",
    ],
)

platform(
    name = "x64_windows-clang-cl",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@bazel_tools//tools/cpp:clang-cl",
    ],
)
