[package]
name = "cxx"
version = "0.3.4" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
links = "cxxbridge03"
license = "MIT OR Apache-2.0"
description = "Safe interop between Rust and C++"
repository = "https://github.com/dtolnay/cxx"
documentation = "https://docs.rs/cxx"
readme = "README.md"
exclude = ["/demo-cxx", "/gen", "/syntax", "/third-party"]
keywords = ["ffi"]
categories = ["development-tools::ffi", "api-bindings"]

[features]
default = [] # c++11
"c++14" = []
"c++17" = []

[dependencies]
cxxbridge-macro = { version = "=0.3.4", path = "macro" }
link-cplusplus = "1.0"

[build-dependencies]
cc = "1.0.49"

[dev-dependencies]
cxx-build = { version = "=0.3.4", path = "gen/build" }
cxx-test-suite = { version = "0", path = "tests/ffi" }
rustversion = "1.0"
trybuild = { version = "1.0.27", features = ["diff"] }

[workspace]
members = ["demo-rs", "gen/build", "gen/cmd", "macro", "tests/ffi"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
