module(
    name = "workerd-cxx",
    version = "0.0.0",
    bazel_compatibility = [">=7.2.1"],
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "apple_support", version = "2.6.1")
bazel_dep(name = "rules_rust", version = "0.71.2")

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    allocator_library = "@rules_rust//ffi/rs:empty",
    versions = [
        "1.91.1",
        "nightly/2026-02-12",
    ],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates.io",
    cargo_lockfile = "//third-party:Cargo.lock",
    manifests = ["//third-party:Cargo.toml"],
    strip_internal_dependencies_from_cargo_lockfile = True,
    supported_platform_triples = [
        "x86_64-apple-darwin",
        "aarch64-apple-darwin",
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
        "x86_64-pc-windows-msvc",
    ],
)
use_repo(crate, "crates.io")

## KJ-RS

capnp_cpp = use_extension("//:capnp_cpp.bzl", "capnp_cpp")
use_repo(capnp_cpp, "capnp-cpp")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
