[package]
name = "cxx-cc"
version = "1.0.194"
authors = ["Nikolai Nechaev <nikolay_nechaev@mail.ru>"]
description = "An implementation detail of the `cxx` crate"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/cxx"
rust-version = "1.85"

[features]
default = ["cxxbridge-flags/default"] # c++11
"c++14" = ["cxxbridge-flags/c++14"]
"c++17" = ["cxxbridge-flags/c++17"]
"c++20" = ["cxxbridge-flags/c++20"]

# By default, cxx.cc is compiled when `cxx` is built.
# But if `compile-at-bridge-stage` is enabled, cxx.cc is
# instead compiled when a bridge is being compiled.
compile-at-bridge-stage = []

[dependencies]
cc = "1.0.101"
cxxbridge-flags = { version = "=1.0.194", path = "../flags", default-features = false }
