[package]
name = "demo"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Toy project from https://github.com/dtolnay/cxx"
repository = "https://github.com/dtolnay/cxx"
edition = "2018"
publish = false

[dependencies]
cxx = { version = "1.0", path = ".." }

[build-dependencies]
cxx-build = { version = "1.0", path = "../gen/build" }
