[package]
name = "demo"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Toy project from https://github.com/dtolnay/cxx"
repository = "https://github.com/dtolnay/cxx"
edition = "2018"
publish = false

[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
