[package]
name = "cxxbridge-flags"
version = "1.0.51"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Compiler configuration of the `cxx` crate (implementation detail)"
repository = "https://github.com/dtolnay/cxx"

[features]
default = [] # c++11
"c++14" = []
"c++17" = []
"c++20" = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
