[package]
name = "cxxbridge-flags"
version = "1.0.78"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::ffi", "compilers"]
description = "Compiler configuration of the `cxx` crate (implementation detail)"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/cxx"
rust-version = "1.48"

[features]
default = [] # c++11
"c++14" = []
"c++17" = []
"c++20" = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
