load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")

cc_library(
    name = "kj-rs-lib",
    srcs = glob(["*.c++"]),
    hdrs = glob(["*.h"]),
    include_prefix = "kj-rs",
    linkstatic = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    visibility = ["//tests:__pkg__"],
    deps = [
        ":bridge",
    ],
)

rust_library(
    name = "kj-rs",
    srcs = glob(["*.rs"]),
    compile_data = glob(["*.h"]),
    edition = "2024",
    link_deps = [
        ":bridge",
        ":kj-rs-lib",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@crates.io//:static_assertions",
        "@workerd-cxx//:cxx",
    ],
)

rust_test(
    name = "kj-rs_test",
    crate = "kj-rs",
    edition = "2024",
)

rust_cxx_bridge(
    name = "bridge",
    src = "lib.rs",
    hdrs = glob(["*.h"]),
    include_prefix = "kj-rs",
    visibility = ["//tests:__pkg__"],
    deps = [
        "@capnp-cpp//src/kj:kj",
        "@capnp-cpp//src/kj:kj-async",
        "@workerd-cxx//:core",
    ],
)
