[package]
name = "cxxbridge-macro"
version = "0.5.9"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Implementation detail of the `cxx` crate."
repository = "https://github.com/dtolnay/cxx"
exclude = ["build.rs", "README.md"]
keywords = ["ffi"]
categories = ["development-tools::ffi"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.4"
syn = { version = "1.0.20", features = ["full"] }

[dev-dependencies]
cxx = { version = "0.5", path = ".." }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
