load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test", "rust_unpretty")
load("//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")

rust_test(
    name = "test",
    size = "small",
    srcs = ["test.rs"],
    edition = "2021",
    deps = [
        ":cxx_test_suite",
        "//:cxx",
    ],
)

rust_test(
    name = "cxx_gen_test",
    size = "small",
    srcs = ["cxx_gen.rs"],
    edition = "2021",
    deps = [
      ":cxx_test_suite",
      "//:cxx",
      "//:cxx-gen",
    ],
)

rust_test(
    name = "compile-test",
    size = "small",
    srcs = ["compiletest.rs"],
    edition = "2021",
    proc_macro_deps = [
      "@crates.io//:rustversion",
    ],
    deps = [
      ":cxx_test_suite",
      "//:cxx",
      "//:cxx-gen",
      "@crates.io//:trybuild",
    ],
)

rust_library(
    name = "cxx_test_suite",
    testonly = True,
    srcs = [
        "ffi/cast.rs",
        "ffi/lib.rs",
        "ffi/module.rs",
    ],
    edition = "2021",
    proc_macro_deps = [
        "//:cxxbridge-macro",
    ],
    deps = [
        ":impl",
        "//:cxx",
        "//kj-rs"
    ],
)

cc_library(
    name = "jsg-mock",
    hdrs = ["ffi/jsg.h"],
    strip_include_prefix = "ffi",
    include_prefix = "workerd/jsg",
)

cc_library(
    name = "impl",
    testonly = True,
    srcs = [
        "ffi/tests.cc",
        ":bridge/source",
        ":module/source",
        "//kj-rs:bridge/source",
    ],
    hdrs = ["ffi/tests.h"],
    linkstatic = True,
    deps = [
        ":bridge/include",
        ":jsg-mock",
        ":module/include",
        "//:core",
        "//kj-rs:bridge/include",
        "//kj-rs:kj-rs-lib",
    ],
)

rust_cxx_bridge(
    name = "bridge",
    testonly = True,
    src = "ffi/lib.rs",
    hdrs = ["ffi/tests.h"],
    deps = [
        "//:core",
        ":jsg-mock",
        ":module",
    ]
)

rust_unpretty(
    name = "expand",
    testonly = True,
    deps = [
        ":cxx_test_suite"
    ]
)

rust_cxx_bridge(
    name = "module",
    testonly = True,
    src = "ffi/module.rs",
    hdrs = ["ffi/tests.h"],
    deps = [
        "//:core",
    ]
)
