load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test", "rust_unpretty")
load("//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")

# https://bazel.build/configure/windows#clang
platform(
    name = "x64_windows-clang-cl",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@bazel_tools//tools/cpp:clang-cl",
    ],
)

rust_library(
    name = "tests",
    srcs = glob(["*.rs"]),
    edition = "2024",
    deps = [
        ":bridge",
        # TODO(now): Why isn't :cxx transitive?
        "@workerd-cxx//:cxx",
        "//kj-rs",
    ],
)

rust_unpretty(
    name = "expand-rust_test",
    testonly = True,
    deps = [
        ":rust_tests"
    ]
)

rust_test(
    name = "rust_tests",
    crate = "tests",
    deps = [
        ":test-promises",
        ":test-maybe",
    ],
)

rust_cxx_bridge(
    name = "bridge",
    src = "lib.rs",
    hdrs = [
        "test-promises.h",
        "test-maybe.h",
        "test-own.h",
        "shared.h",
        "test-refcount.h"
    ],
    include_prefix = "kj-rs-demo",
    deps = [
        "//kj-rs",
    ],
)

cc_library(
    name = "test-promises",
    srcs = [
        "test-promises.c++",
        "test-own.c++",
        "test-refcount.c++"
    ],
    linkstatic = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":bridge",
    ],
)

cc_library(
    name = "test-maybe",
    srcs = [
        "test-maybe.c++",
    ],
    linkstatic = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":bridge",
    ],
)

cc_test(
    name = "awaitables-cc-test",
    size = "medium",
    srcs = [
        "awaitables-cc-test.c++",
    ],
    linkstatic = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    deps = [
        ":tests",
        ":bridge",
        ":test-promises",
        ":test-maybe",
        "//third-party:runtime",
        "@capnp-cpp//src/kj:kj-test",
    ],
)

cc_test(
    name = "convert-test",
    size = "small",
    srcs = [
        "convert-test.c++",
    ],
    linkstatic = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    deps = [
        "//kj-rs",
        "//third-party:runtime",
        "@capnp-cpp//src/kj:kj-test",
    ],
)
