load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test", "rust_unpretty")
load("//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")

# https://bazel.build/configure/windows#clang
platform(
    name = "x64_windows-clang-cl",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@bazel_tools//tools/cpp:clang-cl",
    ],
)

rust_library(
    name = "tests",
    srcs = glob(["*.rs"]),
    edition = "2024",
    deps = [
        ":bridge",
        ":test-date",
        ":test-promises",
        ":test-maybe",
        # TODO(now): Why isn't :cxx transitive?
        "@workerd-cxx//:cxx",
        "//kj-rs",
    ],
)

rust_unpretty(
    name = "expand-rust_test",
    testonly = True,
    deps = [
        ":rust_tests",
    ],
)

rust_test(
    name = "rust_tests",
    crate = "tests",
)

rust_cxx_bridge(
    name = "bridge",
    src = "lib.rs",
    hdrs = [
        "shared.h",
        "test-maybe.h",
        "test-own.h",
        "test-promises.h",
        "test-refcount.h",
    ],
    include_prefix = "kj-rs-demo",
    deps = [
        "//kj-rs",
    ],
)

cc_library(
    name = "test-promises",
    srcs = [
        "test-own.c++",
        "test-promises.c++",
        "test-refcount.c++",
    ],
    linkstatic = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":bridge",
    ],
)

cc_library(
    name = "test-maybe",
    srcs = [
        "test-maybe.c++",
    ],
    linkstatic = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":bridge",
    ],
)

rust_cxx_bridge(
    name = "test-date-bridge",
    src = "test_date.rs",
    hdrs = [
        "test-date.h",
    ],
    include_prefix = "kj-rs-demo",
    deps = [
        "//kj-rs",
    ],
)

cc_library(
    name = "test-date",
    srcs = [
        "test-date.c++",
    ],
    hdrs = [
        "test-date.h",
    ],
    linkstatic = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":test-date-bridge",
    ],
)

cc_test(
    name = "awaitables-cc-test",
    size = "medium",
    srcs = [
        "awaitables-cc-test.c++",
    ],
    linkstatic = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    deps = [
        ":bridge",
        ":tests",
        "//third-party:runtime",
        "@capnp-cpp//src/kj:kj-test",
    ],
)

cc_test(
    name = "convert-test",
    size = "small",
    srcs = [
        "convert-test.c++",
    ],
    linkstatic = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    deps = [
        "//kj-rs",
        "//third-party:runtime",
        "@capnp-cpp//src/kj:kj-test",
    ],
)

cc_test(
    name = "date-test",
    size = "small",
    srcs = [
        "date-test.c++",
    ],
    linkstatic = select({
        "@platforms//os:windows": True,
        "//conditions:default": False,
    }),
    deps = [
        ":tests",
        "//kj-rs",
        "//third-party:runtime",
        "@capnp-cpp//src/kj:kj-test",
    ],
)
